--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.11.5",
+    "eslint": "^8.56.0",
+    "eslint-config-standard": "^17.1.0",
     "git-commit-msg-linter": "^5.0.6",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "eslint-config-standard-with-typescript": "^43.0.0"
   }
 }
