--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --passWithNoTests --silent --runInBand --no-cache", 
+    "test": "jest --passWithNoTests --silent --runInBand --no-cache",
     "test:verbose": "jest --passWithNoTests --runInBand",
     "test:unit": "npm test -- --watch -c jest-unit-config.js",
     "test:integration": "npm test -- --watch -c jest-integration-config.js",
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.11",
     "@types/node": "^20.11.5",
+    "@types/validator": "^13.11.8",
     "eslint": "^8.56.0",
     "eslint-config-standard": "^17.1.0",
     "git-commit-msg-linter": "^5.0.6",
@@ -28,6 +29,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "eslint-config-standard-with-typescript": "^43.0.0"
+    "eslint-config-standard-with-typescript": "^43.0.0",
+    "validator": "^13.11.0"
   }
 }
