--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/validator": "^13.11.8",
     "eslint": "^8.56.0",
     "eslint-config-standard": "^17.1.0",
+    "eslint-config-standard-with-typescript": "^43.0.1",
     "git-commit-msg-linter": "^5.0.6",
     "husky": "^4.3.8",
     "jest": "^29.7.0",
